2002-10-16  Alex Duggan  <aldug@astrolinux.com>
	* configure.in
   require gnome-desktop >= 2.1.0 (fixes #95979)
   
2002-10-16  Alexander Larsson  <alexl@redhat>

	* libnautilus-private/nautilus-dnd.h:
	Add application/x-rootwindow-drop.
	
	* libnautilus-private/nautilus-icon-private.h:
	* libnautilus-private/nautilus-icon-container.[ch]:
	Moved dnd init/fini to realize/unrealize.
	Add nautilus_icon_container_set/get_is_desktop().
	
	* libnautilus-private/nautilus-icon-dnd.[ch]:
	Implement rootwindow drops.
	
	* src/file-manager/fm-desktop-icon-view.c:
	call nautilus_icon_container_set_is_desktop()

2002-10-15  Bastien Nocera  <hadess@hadess.net>

        * src/nautilus-shell-ui.xml: add BackSpace as a key shortcut for
	"Go Up" (like Windows does)

=== nautilus 2.1.1 ===

2002-10-14  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Updated
	
	* configure.in:
	Bump version to 2.1.1
	Require libgnomeui 2.1.1 and eel 2.1.1, pango 1.1.2

2002-10-11  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-directory-view.c
	(fm_directory_view_destroy): Set recent_model to NULL rather than
	model.

2002-10-10  James Willcox  <jwillcox@gnome.org>

	* src/file-manager/fm-directory-view.c: (fm_directory_view_init):
	Set the recent-files limit to 0, since we aren't displaying the
	list at all.

2002-10-10  Dave Camp  <dave@ximian.com>

	* src/file-manager/Makefile.am: Added egg-recent files.  
	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_launch_application), (fm_directory_view_init),
	(fm_directory_view_destroy): Add files to the EggRecentModel when
	launching apps.

	Patch from James Willcox <jwillcox@gnome.org>
	
2002-10-10  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-theme.c (theme_list_prepend):
	If no preview pixmap found. ignore theme. Fixes crash for some crap theme i had installed.

2002-10-10  Alexander Larsson  <alexl@redhat.com>
	
	* libnautilus-private/nautilus-emblem-utils.c (nautilus_emblem_install_custom_emblem):