@@ -1,3 +1,8 @@
+2002-10-18  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-directory-async.c:
+	The HP-UX compiler is an anal retentive bastard.
+
 2002-10-16  Alex Duggan  <aldug@astrolinux.com>
 	* configure.in
    require gnome-desktop >= 2.1.0 (fixes #95979)
